--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,8 +1,8 @@
 <h1><%= @recipe.title %></h1>
 
-<p><%= @recipe.ingredients %></p>
+<%= sanitize(Kramdown::Document.new(@recipe.ingredients).to_html) %>
 
-<p><%= @recipe.body %></p>
+<%= sanitize(Kramdown::Document.new(@recipe.body).to_html) %>
 
 <ul>
   <li><%= link_to "edit", edit_recipe_path %></li>
