views: recipes: Show the description under the title
If the recipe description exists, print it out under the title. The
default empty value will leave this out from the HTML.

Signed-off-by: Brian Kubisiak <brian@kubisiak.com>

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,5 +1,7 @@
 <h1><%= @recipe.title %></h1>
 
+<%= sanitize(Kramdown::Document.new(@recipe.description).to_html) %>
+
 <h5>ingredients</h5>
 <%= sanitize(Kramdown::Document.new(@recipe.ingredients).to_html) %>
 
