--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -9,6 +9,14 @@
 </div>
 
 <div>
+  <%= form.label :description %>
+  <%= form.text_area :description %>
+  <% recipe.errors.full_messages_for(:description).each do |message| %>
+  <div><%= message %></div>
+  <% end %>
+</div>
+
+<div>
   <%= form.label :ingredients %>
   <%= form.text_area :ingredients %>
   <% recipe.errors.full_messages_for(:ingredients).each do |message| %>
