controllers: cooks: Allow adding a cook for a recipe
Add a new subroute under the recipe route that allows posting for
adding a new "I cooked this" entry to the database. The route is
POST'd from the recipe page using a form without any contents (TODO:
is there a better way to do this?).

Signed-off-by: Brian Kubisiak <brian@kubisiak.com>

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -9,3 +9,7 @@
 <%= sanitize(Kramdown::Document.new(@recipe.body).to_html) %>
 
 <%= link_to "edit", edit_recipe_path %>
+
+<%= form_with model: [ @recipe, @recipe.cooks.build ] do |form| %>
+<%= form.submit "cook this" %>
+<% end %>
