views: recipes: Render a "recipe history" grid
On the recipe's page, render a left-side grid using color to indicate
how many times the recipe has been cooked in the month for the past 36
months.

Signed-off-by: Brian Kubisiak <brian@kubisiak.com>

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,3 +1,5 @@
+<%= render "grid", cells: @recipe.count_cooks %>
+
 <h1><%= @recipe.title %></h1>
 
 <%= sanitize(Kramdown::Document.new(@recipe.description).to_html) %>
