views: recipes: Style fixes to the form
- Change the labels on the form elements to match the lowercase
  capitalization scheme in the rest of the app.

- Increase the size of input boxes in the form. All boxes are switched
  to 100% width, with differing height based on the expected amount of
  text.

Signed-off-by: Brian Kubisiak <brian@kubisiak.com>

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,3 +62,24 @@ div.cell-6 {
 div.cell-7 {
     background-color: #002b36;
 }
+
+/* Style the input and textarea boxes for creating recipes */
+textarea {
+    width: 100%;
+}
+
+textarea#recipe_description {
+    height: 3em;
+}
+
+textarea#recipe_ingredients {
+    height: 35em;
+}
+
+textarea#recipe_body {
+    height: 35em;
+}
+
+input#recipe_title {
+    width: 100%;
+}
